# ratatui-ppalla

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/ratatui-bubbles/: Cargo.toml
crates/ratatui-bubbles/examples/: demo.rs
crates/ratatui-bubbles/src/: elm.rs  key_help.rs  lib.rs  list.rs  runtime.rs  spinner.rs  style.rs  table.rs  test_utils.rs  text_input.rs  viewport.rs
crates/ratatui-bubbles/tests/: elm_render.rs  key_help_render.rs  list_render.rs  runtime_render.rs  spinner_render.rs  table_render.rs  text_input_render.rs  viewport_render.rs
crates/ratatui-ppalla/: Cargo.toml
crates/ratatui-ppalla/benches/: prepared.rs
crates/ratatui-ppalla/examples/: demo.rs  prepared_text_demo.rs
crates/ratatui-ppalla/src/: elm.rs  lib.rs  list.rs  test_utils.rs  text_input.rs  viewport.rs
crates/ratatui-ppalla/src/prepared/: mod.rs  prepared_block.rs  prepared_buffer.rs  prepared_layout.rs  prepared_list.rs  prepared_table.rs  prepared_text.rs  prepared_viewport.rs
crates/ratatui-ppalla/tests/: elm_render.rs  key_help_render.rs  list_render.rs  prepared_layout_render.rs  prepared_text_render.rs  runtime_render.rs  spinner_render.rs  table_render.rs  text_input_render.rs  viewport_render.rs
crates/ratatui-presto/: Cargo.toml
crates/ratatui-presto/benches/: prepared.rs
crates/ratatui-presto/examples/: demo.rs
crates/ratatui-presto/src/: elm.rs  lib.rs  spinner.rs  style.rs  test_utils.rs  viewport.rs
crates/ratatui-presto/src/prepared/: mod.rs  prepared_buffer.rs  prepared_layout.rs  prepared_list.rs  prepared_table.rs  prepared_text.rs  prepared_viewport.rs
crates/ratatui-presto/tests/: elm_render.rs  key_help_render.rs  list_render.rs  prepared_layout_render.rs  prepared_text_render.rs  runtime_render.rs  spinner_render.rs  table_render.rs  text_input_render.rs  viewport_render.rs
crates/tui-inject/: Cargo.toml  README.md
crates/tui-inject/scenarios/: counter-html-snapshot.toml  counter-increment.toml  counter-mixed.toml
crates/tui-inject/src/: cli.rs  commands.rs  dump.rs  main.rs  record_fuzz_bench.rs  scenario.rs  widget.rs
docs/: Phase-1-Plan.md  ROADMAP.md  TEST-COVERAGE.md
docs/benchmarks/: baseline.md
docs/coverage/: index.html
docs/test-coverage-heatmap/: index.html
