[workspace]
resolver = "2"
members = ["crates/ratatui-bubbles"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["HeonJe LEE <lhjnano@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lhjnano/ratatui-bubbles"
homepage = "https://github.com/lhjnano/ratatui-bubbles"
description = "Bubble Tea/Bubbles-style TUI components for Ratatui"
keywords = ["tui", "terminal", "ratatui", "bubbles", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
insta = "1"
pretty_assertions = "1"
