[workspace]
resolver = "2"
members = ["crates/ratatui-ppalla", "crates/tui-inject"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["HeonJe LEE <lhjnano@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lhjnano/ratatui-ppalla"
homepage = "https://github.com/lhjnano/ratatui-ppalla"
description = "High-performance TUI primitives for Ratatui — Pretext-inspired prepare/layout pattern"
keywords = ["tui", "terminal", "ratatui", "performance", "ppalla"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
insta = "1"
pretty_assertions = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
proptest = "1"
unicode-segmentation = "1"
unicode-width = "0.1"
criterion = { version = "0.5", default-features = false }
